feat : [board-service] post domain