@@ -1,6 +1,7 @@
 package com.example.board.config;
 
 import io.swagger.v3.oas.annotations.OpenAPIDefinition;
+import io.swagger.v3.oas.annotations.info.Info;
 import io.swagger.v3.oas.models.Components;
 import io.swagger.v3.oas.models.OpenAPI;
 import io.swagger.v3.oas.models.security.SecurityRequirement;
@@ -9,31 +10,34 @@ import io.swagger.v3.oas.models.servers.Server;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
+import java.util.Collections;
 import java.util.List;
 
 @Configuration
 @OpenAPIDefinition(
-        info = @io.swagger.v3.oas.annotations.info.Info(title = "API Documents", version = "1", description = "게시판 API"),
+        info = @Info(
+                title = "게시판 API 명세",
+                version = "1.0.0",
+                description = "게시판 API 명세"),
         security = @io.swagger.v3.oas.annotations.security.SecurityRequirement(name = "Authorization")
 )
 public class SwaggerConfig {
 
     @Bean
     public OpenAPI openAPI() {
+        SecurityScheme securityScheme = new SecurityScheme()
+                .type(SecurityScheme.Type.HTTP)
+                .scheme("bearer")
+                .bearerFormat("JWT")
+                .in(SecurityScheme.In.HEADER)
+                .name("Authorization");
+
+        SecurityRequirement securityRequirement = new SecurityRequirement()
+                .addList("Authorization");
+
         return new OpenAPI()
-                .components(new Components()
-                        .addSecuritySchemes("Authorization",
-                                new SecurityScheme()
-                                        .type(SecurityScheme.Type.HTTP)
-                                        .scheme("bearer")
-                                        .bearerFormat("JWT")
-                                        .in(SecurityScheme.In.HEADER)
-                                        .name("Authorization")
-                        )
-                )
-                .servers(List.of(
-                        new Server().url("http://localhost:8080/api/board-server") // gateway 의 경로로 수정
-                ))
-                .addSecurityItem(new SecurityRequirement().addList("Authorization"));
+                .components(new Components().addSecuritySchemes("Authorization", securityScheme))
+                .security(Collections.singletonList(securityRequirement))
+                .addServersItem(new Server().url("http://localhost:8080/api/board-server"));
     }
 }
